<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewListActivity">

    <EditText
        android:id="@+id/newNameEdtTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/activity_new_list_name_edit_box_hint"
        android:imeActionLabel="Done"
        android:imeOptions="normal"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPriceEdtTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/activity_new_list_price_edit_box_hint"
        android:imeActionLabel="Done"
        android:imeOptions="normal"
        android:inputType="number|numberDecimal"
        android:padding="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAmountEdtTExt" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_black"
        android:padding="5dp"
        android:text="@string/activity_new_list_save_button_tag"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPriceEdtTxt" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <EditText
        android:id="@+id/newAmountEdtTExt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="start|top"
        android:hint="@string/activity_new_list_remark_edit_box_hint"
        android:imeActionLabel="Done"
        android:imeOptions="normal"
        android:inputType="textMultiLine"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNameEdtTxt" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:lines="1"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:text="@string/activity_new_list_default_list_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/addButton"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPriceEdtTxt" />

    <ListView
        android:id="@+id/listItemListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton">

    </ListView>

    <TextView
        android:id="@+id/tutorialTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="sans-serif-medium"
        android:foregroundGravity="center"
        android:lineSpacingExtra="5sp"
        android:padding="5dp"
        android:text="@string/activity_new_list_tutorial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

</androidx.constraintlayout.widget.ConstraintLayout>